2005-03-31  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_rwlock_unlock.S: Use
	functionally equivalent, but shorter instructions.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_broadcast.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_rwlock_timedrdlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_barrier_wait.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_rwlock_rdlock.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sem_wait.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_rwlock_wrlock.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_once.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_rwlock_timedwrlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_signal.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sem_post.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sem_timedwait.S: Likewise.

2005-03-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* sysdeps/mips/Makefile: New file.
	* sysdeps/mips/nptl-sysdep.S: New file.
	* sysdeps/mips/tcb-offsets.sym: New file.
	* sysdeps/mips/pthread_spin_lock.S: New file.
	* sysdeps/mips/pthread_spin_trylock.S: New file.
	* sysdeps/mips/pthreaddef.h: New file.
	* sysdeps/mips/tls.h: New file.
	* sysdeps/mips/jmpbuf-unwind.h: New file.
	* sysdeps/unix/sysv/linux/mips/lowlevellock.h: New file.
	* sysdeps/unix/sysv/linux/mips/bits/pthreadtypes.h: New file.
	* sysdeps/unix/sysv/linux/mips/bits/semaphore.h: New file.
	* sysdeps/unix/sysv/linux/mips/pthread_once.c: New file.
	* sysdeps/unix/sysv/linux/mips/fork.c: New file.
	* sysdeps/unix/sysv/linux/mips/pt-vfork.S: New file.
	* sysdeps/unix/sysv/linux/mips/vfork.S: New file.
	* sysdeps/unix/sysv/linux/mips/clone.S: New file.